# AI-units-platform

./: .gitignore  Cargo.toml  README  package-lock.json  package.json
docs/: CANVAS.canvas  Links.md  References.md  c0st1nus.md  omga.md
docs/.obsidian/: core-plugins.json
src/: main.rs  templates.rs
src/routes/: chats.rs  components.rs  kanban.rs  mod.rs  reference.rs
templates/: index.html
web/src/static/css/: in.css
web/src/static/css/styles/: 404.css  base.css  chat.css  checkbox.css  clientHistory.css  font.css
web/src/static/css/styles/base/: base.css  card.css  checkbox.css  colors.css
web/src/static/css/styles/components/: chat.css  kanban.css
web/src/static/css/styles/page/: admin-base.css  chats.css
web/src/templates/: 404.html  admin-base.html  base.html  chats.html  components.html  index.html  kanban.html  reference.html
web/src/ts/: components.ts  confetti.ts  config.ts  hello.ts
web/src/ts/components/chat/: chat.ts  example.ts  input.ts  message.ts  types.ts
web/src/ts/components/clientHistory/: clientHistory.ts  example.ts  types.ts
web/src/ts/components/companySwitcher/: companySwitcher.ts
web/src/ts/components/kanban/: example.ts  general.ts  main.ts  types.ts
web/src/ts/components/switchers/: companySwitcher.ts  userSwitcher.ts
web/src/ts/dto/: chat.ts
web/src/ts/fun/: confetti.ts
web/src/ts/helpers/: getTemplate.ts  unknownToString.ts
web/src/ts/page/: chats.ts
